# hed-web

./: .codeclimate.yml  .codespellrc  .coveragerc  .gitattributes  .gitignore  .lycheeignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  TEST_REVIEW.md  build_docs.py  codecov.yml  config_template.py  default_config.py  index.html  lychee.toml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  qlty.toml  qtly.toml  readthedocs.yml  requirements.txt  run_service_tests.py  setup.cfg  setup.py  test_output.txt  validate_dataset.html  validate_file.html  validate_sidecar.html  validate_string.html  vite.config.js  vitest.config.js
.context/: ideas.md  plan.md  research.md  scratch_history.md
.github/: copilot-instructions.md  dependabot.yaml  dependabot.yml
.github/workflows/: black.yaml  black.yml  ci.yaml  ci.yml  claude-code-review.yaml  claude-code-review.yml  claude.yaml  claude.yml  codespell.yaml  codespell.yml  deploy-pages.yml  docs.yaml  docs.yml  links.yaml  mdformat.yaml  ruff.yaml  ruff.yml  test_server.yaml  test_server_dev.yaml  test_server_prod.yaml  typos.yaml
.rules/: ci_cd.md  code_review.md  git.md  python.md  testing.md
_build/html/: .buildinfo  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js  user_guide.html
deploy/: .dockerignore  Dockerfile  base_config.py  deploy.sh  gunicorn-logrotate.conf  requirements.txt
deploy_hed/: Dockerfile  base_config.py  deploy.sh  gunicorn-logrotate.conf  requirements.txt
deploy_hed_dev/: Dockerfile  base_config.py  deploy.sh  httpd.conf  requirements.txt  web.wsgi
docs/: Makefile  build_docs.bat  conf.py  deployment.md  index.md  index.rst  installation.md  introduction.md  requirements.txt  user_guide.md
docs/_static/: custom.css  gh_icon_fix.js
docs/_templates/: base.html  custom-links.html  layout.html  quicklinks.html
docs/api/: app_factory.md  architecture.md  base_operations.md  columns.md  getting_started.md  index.md  index.rst  operations.rst  process_form.md  routes.md  schema_operations.md  service_categories.md  sidecar_operations.md  spreadsheet_operations.md  string_operations.md  utilities.rst  web_application.rst
docs/source/: Overview.md  conf.py  index.rst
hedweb/: __init__.py  _version.py  app_factory.py  base_operations.py  columns.py  event_operations.py  events.py  process_base.py  process_events.py  process_form.py  process_schemas.py  process_service.py  process_services.py  process_sidecars.py  process_spreadsheets.py  process_strings.py  requirements.txt  routes.py  runserver.py  schema.py  schema_operations.py  schemas.py  services.py  sidecar.py  sidecar_operations.py  sidecars.py  spreadsheet.py  spreadsheet_operations.py  string_operations.py  strings.py  web_util.py
hedweb/constants/: base_constants.py  file_constants.py  page_constants.py  route_constants.py
hedweb/deploy/: deploy.sh  requirements.txt
hedweb/static/: search-local.html  search.html  searchindex.js
hedweb/templates/: actions.html  actions_new.html  column-info.html  events.html  events_temp.html  file-input.html  hed-tools-home.html  json-input.html  layout.html  options.html  options_new.html  options_new_temp.html  process-buttons.html  query.html  remodel-input.html  schema-input.html  schema-pulldown.html  schema-pulldown_new.html  schema.html  schemas-input.html  schemas-pulldown.html  schemas.html  services.html  sidecar-input.html  sidecar.html  sidecars-input.html  sidecars.html  spreadsheet-input.html  spreadsheet.html  spreadsheets-input.html  spreadsheets.html  string.html  strings.html
hedweb/tests/: test_dictionary.py  test_events.py  test_hedstring.py  test_routes.py  test_schema.py  test_services.py  test_spreadsheet.py  test_spreadsheet_utils.py  test_utils.py  test_validation.py  test_web_utils.py  testing_dict_val.py  testing_dictionary_validate.py  testing_dups.py  testing_responses.py  testing_string_validate.py
service_tests/: run_service_tests.py  test_service_base.py  test_service_event_remodeling.py  test_service_event_search.py  test_service_event_services.py  test_service_get_services.py  test_service_library.py  test_service_sidecars.py  test_service_spreadsheet.py  test_service_strings.py
services_tests/: run_service_tests.py  test_services_base.py  test_services_event_remodeling.py  test_services_event_search.py  test_services_event_services.py  test_services_get_services.py  test_services_library.py  test_services_sidecars.py  test_services_spreadsheet.py  test_services_strings.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/introduction/: index.html
site/search/: search_index.json
site/user_guide/: index.html
src/: main.jsx  test-setup.js  validate_dataset.jsx  validate_file.jsx  validate_sidecar.jsx  validate_string.jsx
src/components/: ErrorDisplay.spec.jsx  NavOptions.jsx
tests/: test_base_operations.py  test_columns.py  test_events.py  test_runserver.py  test_schema.py  test_schemas.py  test_services.py  test_sidecar.py  test_sidecars.py  test_spreadsheet.py  test_spreadsheets.py  test_strings.py  test_web_base.py  test_web_util.py
tests/data/: ExcelMultipleSheets.xlsx  ExcelOneSheet.xlsx  HEDBad8.2.0.mediawiki  LKTEventCodesHED3.tsv  SpreadsheetTest.tsv  bad_reorder_remdl.json  bids_events.json  bids_events.tsv  bids_events_bad.json  both_types_events.json  def_test.json  full_example.json  only_splitevents_example.json  rename_example.json  rename_example_temp_rmdl.json  simple_reorder_remdl.json  simple_reorder_rmdl.json  splitevents_example_temp_rmdl.json  spreadsheet_with_defs.tsv  sternberg_map.tsv  test_with_summary_rmdl.json
tests/test_routes/: test_routes_base.py  (+15 more)
tests_services/: test_services_base.py  test_services_event_remodeling.py  test_services_event_search.py  test_services_event_services.py  test_services_get_services.py  test_services_library.py  test_services_sidecars.py  test_services_spreadsheet.py  test_services_strings.py
webinterface/: requirements.txt
webtools/: requirements.txt
(+274 files in other folders)
