[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "hedweb"
version = "1.0.0"
description = "Web interface, REST services, and Docker deployment for HED tools."
readme = "README.md"
authors = [
    { name = "VisLab" },
    { name = "Ian Callanan" },
    { name = "Jeremy Cockfield" },
    { name = "Kay Robbins", email = "Kay.Robbins@utsa.edu" }
]
license = { text = "MIT License" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "Flask>=3.1.1",
    "Flask-WTF>=1.2.2",
    "config>=0.5.1",
    "hedtools>=0.9.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "Werkzeug>=3.1.3",
    "requests>=2.32.4",
    "table-remodeler>=0.2.0"
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.1.0,<10.0",
    "furo>=2024.1.29",
    "sphinx-copybutton>=0.5.2",
    "myst-parser>=3.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "linkify-it-py>=2.0.3"
]
dev = [
    "black>=26.1.0",
    "ruff>=0.8.0",
    "coverage>=7.0.0",
    "codespell>=2.2.0",
    "mdformat==0.7.22",
    "mdformat-myst==0.3.0"
]
prod = [
    "gunicorn>=23.0.0"
]

[project.scripts]
hedweb = "hedweb.runserver:main"

[project.urls]
Homepage = "https://github.com/hed-standard/hed-web"
Documentation = "https://www.hedtags.org/hed-web"
Repository = "https://github.com/hed-standard/hed-web.git"
Issues = "https://github.com/hed-standard/hed-web/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["hedweb*"]

[tool.setuptools.package-data]
hedweb = ["templates/*", "static/*", "constants/*"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["hedweb"]

[tool.mdformat]
wrap = "no"
number = false

[tool.pytest.ini_options]
testpaths = ["tests", "services_tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
# Separate markers for different test types
markers = [
    "unit: Unit tests that don't require external services",
    "service: Service tests that require a running HED web server",
]
