[metadata]
name = hedweb
author = VisLab, Ian Callanan, Jeremy Cockfield, Kay Robbins
author_email = Kay.Robbins@utsa.edu
description = "Web interface, REST services, and Docker deployment for HED tools.",
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hed-standard/hed-web/
# project_urls =
bug Tracker = https://github.com/hed-standard/hed-web/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent



[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >=3.9
install_requires =
    click
    coverage
    defusedxml
    et-xmlfile
    Flask
    Flask-WTF
    inflect
    itsdangerous
    jdcal
    Jinja2
    MarkupSafe
    numpy
    openpyxl
    pandas
    portalocker
    python-dateutil
    pytz
    semantic-version
    six
    Sphinx
    SphinxExtensions
    sphinx_rtd_theme
    Werkzeug
    xlrd
    attrs


[options.packages.find]
include = hed*

[versioneer]
VCS = git
style = pep440
versionfile_source = hedweb/_version.py
versionfile_build = hedweb/_version.py
tag_prefix =
parentdir_prefix = hedweb-